--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes pulse {
+  70% {
+    opacity: 0.7;
+  }
+}
+.animate-pulse-custom {
+  animation: pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
